Parser.cpp
/*----------------------------------------------------------------------
Compiler Generator Coco/R,
Copyright (c) 1990, 2004 Hanspeter Moessenboeck, University of Linz
extended by M. Loeberbauer & A. Woess, Univ. of Linz
ported to C++ by Csaba Balazs, University of Szeged
with improvements by Pat Terry, Rhodes University

This program is free software; you can redistribute it and/or modify it 
under the terms of the GNU General Public License as published by the 
Free Software Foundation; either version 2, or (at your option) any 
later version.

This program is distributed in the hope that it will be useful, but 
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
for more details.

You should have received a copy of the GNU General Public License along 
with this program; if not, write to the Free Software Foundation, Inc., 
59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

As an exception, it is allowed to write an extension of Coco/R that is
used as a plugin in non-free software.

If not otherwise stated, any source code generated by Coco/R (other than 
Coco/R itself) does not fall under the GNU General Public License.
-----------------------------------------------------------------------*/


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"


namespace Four20 {


void Parser::SynErr(int n) {
	if (errDist >= minErrDist) errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	if (errDist >= minErrDist) errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::characterProd(wchar_t* &value) {
		Expect(_character);
		value = coco_string_create(t->val); 
}

void Parser::stringProd(wchar_t* &value) {
		Expect(_string);
		value = coco_string_create(t->val); 
}

void Parser::numProd(wchar_t* &value) {
		Expect(_number);
		value = coco_string_create(t->val); 
}

void Parser::variableProd(wchar_t* &name) {
		Expect(_variable);
		name = coco_string_create(t->val); 
}

void Parser::writeProd(Stat* &s) {
		Expr* e; 
		Expect(_write);
		expression(e);
		Expect(7 /* ";" */);
		s = new Write(e); 
}

void Parser::expression(Expr* &expr) {
		Operator op; Expr* e2; 
		factor(expr);
		while (StartOf(1)) {
			simpleExpression(expr, op);
		}
}

void Parser::factor(Expr* &e) {
		wchar_t* name; wchar_t* value; 
		if (la->kind == _character) {
			characterProd(value);
			e = new CharCon(value); 
		} else if (la->kind == _variable) {
			variableProd(name);
			e = new VarCon(((Var*)curProc->find(name))); 
		} else if (la->kind == _string) {
			stringProd(value);
			e = new StringCon(value); 
		} else if (la->kind == _number) {
			numProd(value);
			e = new IntCon(value); 
		} else if (la->kind == _idenToken) {
			identifier(name);
			e = new DefineCon(name); 
		} else SynErr(32);
}

void Parser::identifier(wchar_t* &name) {
		Expect(_idenToken);
		name = coco_string_create(t->val); 
}

void Parser::additationOperator(Operator &op) {
		op = Operator::ADD; 
		if (la->kind == 8 /* "+" */) {
			Get();
		} else if (la->kind == 9 /* "-" */) {
			Get();
			op = Operator::SUB; 
		} else SynErr(33);
}

void Parser::multiplyOperator(Operator &op) {
		op = Operator::MUL; 
		if (la->kind == 10 /* "*" */) {
			Get();
		} else if (la->kind == 11 /* "/" */) {
			Get();
			op = Operator::DIV; 
		} else SynErr(34);
}

void Parser::relationalOperator(Operator &op) {
		op = Operator::EQU; 
		if (la->kind == 12 /* "==" */) {
			Get();
		} else if (la->kind == 13 /* "!=" */) {
			Get();
			op = Operator::NEQ; 
		} else if (la->kind == 14 /* ">" */) {
			Get();
			op = Operator::LSS; 
		} else if (la->kind == 15 /* "<" */) {
			Get();
			op = Operator::GTR; 
		} else SynErr(35);
}

void Parser::simpleExpression(Expr* &expr, Operator &op) {
		Expr* e2; 
		if (la->kind == 8 /* "+" */ || la->kind == 9 /* "-" */) {
			additationOperator(op);
			factor(e2);
			expr =  new BinExpr(expr, op, e2); 
		} else if (la->kind == 10 /* "*" */ || la->kind == 11 /* "/" */) {
			multiplyOperator(op);
			factor(e2);
			expr =  new BinExpr(expr, op, e2); 
		} else if (StartOf(2)) {
			relationalOperator(op);
			factor(e2);
			expr =  new BinExpr(expr, op, e2); 
		} else SynErr(36);
}

void Parser::ifStatement(Stat* &stat) {
		Expr* expr; Stat* stat2; 
		Expect(16 /* "jeigu" */);
		expression(expr);
		statement(stat);
		stat = new If(expr, stat); 
		if (la->kind == 17 /* "kitaip" */) {
			Get();
			statement(stat2);
			stat = new IfElse(stat, stat2); 
		}
}

void Parser::statement(Stat* &stat) {
		Expr* expr; Stat* state2; wchar_t* name; 
		if (la->kind == _variable) {
			variableProd(name);
			Expect(18 /* "=" */);
			expression(expr);
			Expect(7 /* ";" */);
			stat = new Assignment(curProc->find(name), expr); 
		} else if (la->kind == 16 /* "jeigu" */) {
			ifStatement(stat);
		} else if (la->kind == 27 /* "nuo" */) {
			forStatement(stat);
		} else if (la->kind == _idenToken) {
			procedureStatement(stat);
		} else if (la->kind == _write) {
			writeProd(stat);
		} else SynErr(37);
}

void Parser::forStatement(Stat* &stat) {
		wchar_t* name;  wchar_t* varName; Assignment* start = NULL; Expr* startExpr = NULL; Expr* toExpr; Stat* endStat; Stat* doStat; 
		Expect(27 /* "nuo" */);
		variableProd(varName);
		curProc->add(new Var(varName, Type::INT)); 
		if (la->kind == 18 /* "=" */) {
			Get();
			expression(startExpr);
			start = new Assignment(curProc->find(varName), startExpr); 
		}
		Expect(28 /* "iki" */);
		expression(toExpr);
		Expect(29 /* "daryti" */);
		statement(endStat);
		statement(doStat);
		stat = new For(start, toExpr, endStat, doStat); 
}

void Parser::procedureStatement(Stat* &stat) {
		wchar_t* name;  
		identifier(name);
		stat = new Call(curProc->find(name));  
		Expect(23 /* "(" */);
		while (StartOf(3)) {
			if (la->kind == _variable) {
				variableProd(name);
				((Call*)stat)->parameters.push_back(curProc->find(name)); 
			} else if (la->kind == _number) {
				numProd(name);
				((Call*)stat)->parameters.push_back(new Var(name, Type::INT)); 
			} else if (la->kind == _character) {
				characterProd(name);
				((Call*)stat)->parameters.push_back(new Var(name, Type::CHAR)); 
			} else {
				stringProd(name);
				((Call*)stat)->parameters.push_back(new Var(name, Type::STRING)); 
			}
		}
		Expect(24 /* ")" */);
		Expect(7 /* ";" */);
}

void Parser::Four20() {
		Stat* stat; curProc = new Procedure(L"Main", Type::UNDEF, NULL, this); 
		while (la->kind == 30 /* "#define" */) {
			define();
		}
		while (la->kind == 19 /* "char" */ || la->kind == 20 /* "string" */ || la->kind == 21 /* "int" */) {
			declaration();
		}
		while (la->kind == 22 /* "procedura" */) {
			procedureDeclaration();
		}
}

void Parser::define() {
		wchar_t* name; Expr* expr; 
		Expect(30 /* "#define" */);
		identifier(name);
		factor(expr);
		curProc->add(new Var(name, Type::DEF)); Obj* obj = curProc->find(name);  curProc->addStat(new Assignment(obj, expr)); 
}

void Parser::declaration() {
		wchar_t* name; Type type; Expr* expr;  
		typeSpecifier(type);
		variableProd(name);
		curProc->add(new Var(name, type)); Obj* obj = curProc->find(name); 
		if (la->kind == 18 /* "=" */) {
			Get();
			expression(expr);
			curProc->addStat(new Assignment(obj, expr)); 
		}
		Expect(7 /* ";" */);
}

void Parser::procedureDeclaration() {
		wchar_t* name; wchar_t* varName; Type type; Stat* state; 
		Expect(22 /* "procedura" */);
		identifier(name);
		Procedure* oldProc = curProc;
		     curProc = new Procedure(name, Type::UNDEF, oldProc, this);
		     oldProc->add(curProc); 
		Expect(23 /* "(" */);
		while (la->kind == 19 /* "char" */ || la->kind == 20 /* "string" */ || la->kind == 21 /* "int" */) {
			typeSpecifier(type);
			variableProd(varName);
			curProc->add(new Var(varName, type)); 
		}
		Expect(24 /* ")" */);
		Expect(25 /* "{" */);
		while (la->kind == 19 /* "char" */ || la->kind == 20 /* "string" */ || la->kind == 21 /* "int" */) {
			declaration();
		}
		while (StartOf(4)) {
			statement(state);
			curProc->addStat(state); 
		}
		Expect(26 /* "}" */);
		curProc = oldProc; 
}

void Parser::typeSpecifier(Type &type) {
		if (la->kind == 19 /* "char" */) {
			type = Type::CHAR; 
			Get();
		} else if (la->kind == 20 /* "string" */) {
			Get();
			type = Type::STRING; 
		} else if (la->kind == 21 /* "int" */) {
			Get();
			type = Type::INT; 
		} else SynErr(38);
}




// If the user declared a method Init and a mehtod Destroy they should
// be called in the contructur and the destructor respctively.
//
// The following templates are used to recognize if the user declared
// the methods Init and Destroy.

template<typename T>
struct ParserInitExistsRecognizer {
	template<typename U, void (U::*)() = &U::Init>
	struct ExistsIfInitIsDefinedMarker{};

	struct InitIsMissingType {
		char dummy1;
	};
	
	struct InitExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static InitIsMissingType is_here(...);

	// exist only if ExistsIfInitIsDefinedMarker is defined
	template<typename U>
	static InitExistsType is_here(ExistsIfInitIsDefinedMarker<U>*);

	enum { InitExists = (sizeof(is_here<T>(NULL)) == sizeof(InitExistsType)) };
};

template<typename T>
struct ParserDestroyExistsRecognizer {
	template<typename U, void (U::*)() = &U::Destroy>
	struct ExistsIfDestroyIsDefinedMarker{};

	struct DestroyIsMissingType {
		char dummy1;
	};
	
	struct DestroyExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static DestroyIsMissingType is_here(...);

	// exist only if ExistsIfDestroyIsDefinedMarker is defined
	template<typename U>
	static DestroyExistsType is_here(ExistsIfDestroyIsDefinedMarker<U>*);

	enum { DestroyExists = (sizeof(is_here<T>(NULL)) == sizeof(DestroyExistsType)) };
};

// The folloing templates are used to call the Init and Destroy methods if they exist.

// Generic case of the ParserInitCaller, gets used if the Init method is missing
template<typename T, bool = ParserInitExistsRecognizer<T>::InitExists>
struct ParserInitCaller {
	static void CallInit(T *t) {
		// nothing to do
	}
};

// True case of the ParserInitCaller, gets used if the Init method exists
template<typename T>
struct ParserInitCaller<T, true> {
	static void CallInit(T *t) {
		t->Init();
	}
};

// Generic case of the ParserDestroyCaller, gets used if the Destroy method is missing
template<typename T, bool = ParserDestroyExistsRecognizer<T>::DestroyExists>
struct ParserDestroyCaller {
	static void CallDestroy(T *t) {
		// nothing to do
	}
};

// True case of the ParserDestroyCaller, gets used if the Destroy method exists
template<typename T>
struct ParserDestroyCaller<T, true> {
	static void CallDestroy(T *t) {
		t->Destroy();
	}
};

void Parser::Parse() {
	t = NULL;
	la = dummyToken = new Token();
	la->val = coco_string_create(L"Dummy Token");
	Get();
	Four20();
	Expect(0);
}

Parser::Parser(Scanner *scanner) {
	maxT = 31;

	ParserInitCaller<Parser>::CallInit(this);
	dummyToken = NULL;
	t = la = NULL;
	minErrDist = 2;
	errDist = minErrDist;
	this->scanner = scanner;
	errors = new Errors();
}

bool Parser::StartOf(int s) {
	const bool T = true;
	const bool x = false;

	static bool set[5][33] = {
		{T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,x,x,x, T,T,T,T, T,T,T,T, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,x,x,x, x,x,x,x, T,T,T,T, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,T,x,x, T,x,T,x, x,x,x,x, x,x,x,x, T,x,x,x, x,x,x,x, x,x,x,T, x,x,x,x, x}
	};



	return set[s][la->kind];
}

Parser::~Parser() {
	ParserDestroyCaller<Parser>::CallDestroy(this);
	delete errors;
	delete dummyToken;
}

Errors::Errors() {
	count = 0;
}

void Errors::SynErr(int line, int col, int n) {
	wchar_t* s;
	switch (n) {
			case 0: s = coco_string_create(L"EOF expected"); break;
			case 1: s = coco_string_create(L"idenToken expected"); break;
			case 2: s = coco_string_create(L"character expected"); break;
			case 3: s = coco_string_create(L"number expected"); break;
			case 4: s = coco_string_create(L"variable expected"); break;
			case 5: s = coco_string_create(L"string expected"); break;
			case 6: s = coco_string_create(L"write expected"); break;
			case 7: s = coco_string_create(L"\";\" expected"); break;
			case 8: s = coco_string_create(L"\"+\" expected"); break;
			case 9: s = coco_string_create(L"\"-\" expected"); break;
			case 10: s = coco_string_create(L"\"*\" expected"); break;
			case 11: s = coco_string_create(L"\"/\" expected"); break;
			case 12: s = coco_string_create(L"\"==\" expected"); break;
			case 13: s = coco_string_create(L"\"!=\" expected"); break;
			case 14: s = coco_string_create(L"\">\" expected"); break;
			case 15: s = coco_string_create(L"\"<\" expected"); break;
			case 16: s = coco_string_create(L"\"jeigu\" expected"); break;
			case 17: s = coco_string_create(L"\"kitaip\" expected"); break;
			case 18: s = coco_string_create(L"\"=\" expected"); break;
			case 19: s = coco_string_create(L"\"char\" expected"); break;
			case 20: s = coco_string_create(L"\"string\" expected"); break;
			case 21: s = coco_string_create(L"\"int\" expected"); break;
			case 22: s = coco_string_create(L"\"procedura\" expected"); break;
			case 23: s = coco_string_create(L"\"(\" expected"); break;
			case 24: s = coco_string_create(L"\")\" expected"); break;
			case 25: s = coco_string_create(L"\"{\" expected"); break;
			case 26: s = coco_string_create(L"\"}\" expected"); break;
			case 27: s = coco_string_create(L"\"nuo\" expected"); break;
			case 28: s = coco_string_create(L"\"iki\" expected"); break;
			case 29: s = coco_string_create(L"\"daryti\" expected"); break;
			case 30: s = coco_string_create(L"\"#define\" expected"); break;
			case 31: s = coco_string_create(L"??? expected"); break;
			case 32: s = coco_string_create(L"invalid factor"); break;
			case 33: s = coco_string_create(L"invalid additationOperator"); break;
			case 34: s = coco_string_create(L"invalid multiplyOperator"); break;
			case 35: s = coco_string_create(L"invalid relationalOperator"); break;
			case 36: s = coco_string_create(L"invalid simpleExpression"); break;
			case 37: s = coco_string_create(L"invalid statement"); break;
			case 38: s = coco_string_create(L"invalid typeSpecifier"); break;

		default:
		{
			wchar_t format[20];
			coco_swprintf(format, 20, L"error %d", n);
			s = coco_string_create(format);
		}
		break;
	}
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
	coco_string_delete(s);
	count++;
}

void Errors::Error(int line, int col, const wchar_t *s) {
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
	count++;
}

void Errors::Warning(int line, int col, const wchar_t *s) {
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
}

void Errors::Warning(const wchar_t *s) {
	wprintf(L"%ls\n", s);
}

void Errors::Exception(const wchar_t* s) {
	wprintf(L"%ls", s); 
	exit(1);
}

} // namespace

